@@ -1,3 +1,4 @@
+2763 [Audio Encoder]        ignore the sample rate change if source and target are identical
 2762 [Audio Encoder]        fixed "NicAudio" not being saved as preferred decoder (regression of 2693)
 2761 [OneClick] + [AVS SC]  enable AviSource() or DirectShowSource() only if suitable
 2760 [OneClick]             cosmetics
